--- a/assets/css/partials/pages/_home.scss
+++ b/assets/css/partials/pages/_home.scss
@@ -60,8 +60,10 @@ header {
                         color: white;
 
                     }
+
                     .bag-btn {
                         position: relative;
+
                         .item-count {
                             position: absolute;
                             position: absolute;
@@ -118,9 +120,10 @@ header {
     }
 
     .hidden-search-box {
-        height: 110px;
         background-color: white;
-
+        position: absolute;
+        width: 100%;
+        height: 114px;
         .hidden-search {
             border: 1px solid gray;
             background-color: #f5ea77;
@@ -135,20 +138,95 @@ header {
         }
 
         ::placeholder {
-            /* Chrome, Firefox, Opera, Safari 10.1+ */
             color: black;
             opacity: 1;
-            /* Firefox */
         }
 
         :-ms-input-placeholder {
-            /* Internet Explorer 10-11 */
             color: black;
         }
 
         ::-ms-input-placeholder {
-            /* Microsoft Edge */
             color: black;
         }
+    }
+
+  
+    @-webkit-keyframes animatetop {
+        from {
+            top: -300px;
+            opacity: 0
+        }
+
+        to {
+            top: 0;
+            opacity: 1
+        }
+    }
+
+    @keyframes animatetop {
+        from {
+            top: -300px;
+            opacity: 0
+        }
+
+        to {
+            top: 0;
+            opacity: 1
+        }
+    }
+
+}
+
+
+main {
+
+   
+    .my-modal {
+        display: none;
+        position: absolute;
+ 
+        justify-content: end;
+        z-index: 1;
+     
+        left: 0;
+        top: 0;
+        width: 100%;
+    
+        height: calc(100vh - 155px);
+    
+        overflow: auto;
+   
+        background-color: rgb(0, 0, 0);
+   
+        background-color: rgba(0, 0, 0, 0.4);
+
+        .my-modal-content {
+            position: relative;
+            background-color: #fefefe;
+            padding: 7px 15px 70px 15px;
+            height: calc(100vh - 155px);
+        
+            width: 30%;
+            -webkit-animation-name: animatetop;
+            -webkit-animation-duration: 0.4s;
+            animation-name: animatetop;
+            animation-duration: 0.4s;
+
+            .modal-body {
+                padding: 2px 16px;
+
+                .empty-modal {
+                    display: inline-block;
+                    padding: 70px 94px;
+                    text-align: center;
+                }
+            }
+        }
+    }
+    .csp {
+        width: 100%;
+        height: 150px;
+        background-color: #cc33ff;
     }
 }
