--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,8 +112,10 @@ header .menu-box .navigation-bar .nav-pages .nav-pages-list .nav-pages-text:hove
 }
 
 header .hidden-search-box {
-  height: 110px;
   background-color: white;
+  position: absolute;
+  width: 100%;
+  height: 114px;
 }
 
 header .hidden-search-box .hidden-search {
@@ -129,41 +131,97 @@ header .hidden-search-box .hidden-search:focus-visible {
 }
 
 header .hidden-search-box ::-webkit-input-placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: black;
   opacity: 1;
-  /* Firefox */
 }
 
 header .hidden-search-box :-ms-input-placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: black;
   opacity: 1;
-  /* Firefox */
 }
 
 header .hidden-search-box ::-ms-input-placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: black;
   opacity: 1;
-  /* Firefox */
 }
 
 header .hidden-search-box ::placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: black;
   opacity: 1;
-  /* Firefox */
 }
 
 header .hidden-search-box :-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
   color: black;
 }
 
 header .hidden-search-box ::-ms-input-placeholder {
-  /* Microsoft Edge */
   color: black;
+}
+
+@-webkit-keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+main .my-modal {
+  display: none;
+  position: absolute;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: calc(100vh - 155px);
+  overflow: auto;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+main .my-modal .my-modal-content {
+  position: relative;
+  background-color: #fefefe;
+  padding: 7px 15px 70px 15px;
+  height: calc(100vh - 155px);
+  width: 30%;
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+}
+
+main .my-modal .my-modal-content .modal-body {
+  padding: 2px 16px;
+}
+
+main .my-modal .my-modal-content .modal-body .empty-modal {
+  display: inline-block;
+  padding: 70px 94px;
+  text-align: center;
+}
+
+main .csp {
+  width: 100%;
+  height: 150px;
+  background-color: #cc33ff;
 }
 
 * {
