Header with responsibility finished and slider created

--- a/assets/css/partials/pages/_home.scss
+++ b/assets/css/partials/pages/_home.scss
@@ -5,12 +5,98 @@ input[type="search"]::-webkit-search-results-decoration {
     -webkit-appearance: none;
 }
 
+@media only screen and (max-width: 340px) {
+    .info-text {
+        p {
+            font-size: 12px !important;
+        }
+    }
+
+    .logo {
+        height: 30px !important;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    .nav-user-list {
+        margin: 0 !important;
+    }
+
+    .navbar-toggler {
+        padding: 0 !important;
+    }
+}
+
 @media only screen and (max-width: 450px) {
     .hidden-search {
         width: auto !important;
     }
+
+    .item-count {
+        left: 12px !important;
+    }
 }
 
+@media only screen and (max-width: 992px) {
+
+    .navbar-toggler {
+        margin: 10px 0px !important;
+    }
+
+    .nav-item .nav-link {
+        color: black !important;
+        padding: 10px 0px !important;
+    }
+
+    .findus-list {
+        display: none;
+    }
+
+    .menu-box {
+        height: 82px !important;
+    }
+    .my-modal-content {
+        width: 100% !important;
+        .empty-modal {
+            padding: 50px 0 !important;
+        }
+    }
+    
+}
+
+@media only screen and (min-width:992px) {
+
+    .my-toggle-btn {
+        display: none;
+    }
+
+}
+
+
+@media only screen and (min-width:992px)and (max-width: 1200px) {
+
+    .my-modal-content {
+        width: 38% !important;
+
+        .empty-modal {
+            padding: 70px 92px !important;
+        }
+    }
+}
+
+@media only screen and (min-width:1200px)and(max-width: 1400px) {
+
+    .my-modal-content {
+        width: 33% !important;
+
+        .empty-modal {
+            padding: 70px 99px !important;
+        }
+    }
+}
+.owl-nav {
+    display: none;
+}
 ul,
 li {
     list-style-type: none;
@@ -49,6 +135,11 @@ header {
             height: 67px;
 
             .nav-user-section {
+                .navbar-toggler {
+                    border: none;
+                    margin: 0 0 20px 0 !important;
+                }
+
                 .nav-user-list {
                     margin: 0 15px;
                     text-align: center;
@@ -100,15 +191,19 @@ header {
         }
 
         .navigation-bar {
-            .nav-pages {
-                .nav-pages-list {
+            .navbar {
+                padding: 0;
+                z-index: 999;
+
+                .navbar-nav {
                     color: white;
                     font-size: 15px;
                     font-weight: 600;
 
-                    .nav-pages-text {
+                    .nav-link {
                         color: white;
                         margin: 0 12px;
+                        padding: 0;
 
                         &:hover {
                             color: #f5ea77;
@@ -116,7 +211,10 @@ header {
                     }
                 }
             }
+
+
         }
+
     }
 
     .hidden-search-box {
@@ -124,6 +222,8 @@ header {
         position: absolute;
         width: 100%;
         height: 114px;
+        z-index: 999;
+
         .hidden-search {
             border: 1px solid gray;
             background-color: #f5ea77;
@@ -151,7 +251,7 @@ header {
         }
     }
 
-  
+
     @-webkit-keyframes animatetop {
         from {
             top: -300px;
@@ -181,52 +281,94 @@ header {
 
 main {
 
-   
-    .my-modal {
-        display: none;
-        position: absolute;
- 
-        justify-content: end;
-        z-index: 1;
-     
-        left: 0;
-        top: 0;
-        width: 100%;
+    .modal-position {
+        .my-modal {
+            display: none;
+            position: absolute;
     
-        height: calc(100vh - 155px);
+            justify-content: end;
+            z-index: 999;
     
-        overflow: auto;
-   
-        background-color: rgb(0, 0, 0);
-   
-        background-color: rgba(0, 0, 0, 0.4);
-
-        .my-modal-content {
-            position: relative;
-            background-color: #fefefe;
-            padding: 7px 15px 70px 15px;
-            height: calc(100vh - 155px);
-        
-            width: 30%;
-            -webkit-animation-name: animatetop;
-            -webkit-animation-duration: 0.4s;
-            animation-name: animatetop;
-            animation-duration: 0.4s;
-
-            .modal-body {
-                padding: 2px 16px;
-
-                .empty-modal {
-                    display: inline-block;
-                    padding: 70px 94px;
-                    text-align: center;
+            left: 0;
+            top: 0;
+            width: 100%;
+    
+            min-height: 600px;
+    
+            overflow: auto;
+            .my-modal-content {
+                position: relative;
+                background-color: #fefefe;
+                width: 30%;
+                -webkit-animation-name: animatetop;
+                -webkit-animation-duration: 0.4s;
+                animation-name: animatetop;
+                animation-duration: 0.4s;
+    
+                .modal-body {
+                    padding: 2px 16px;
+    
+                    .empty-modal {
+                        display: inline-block;
+                        padding: 70px 109px;
+                        text-align: center;
+                    }
                 }
             }
         }
     }
-    .csp {
-        width: 100%;
-        height: 150px;
-        background-color: #cc33ff;
+   
+
+    .slider-container {
+        background-color: white;
+        padding: 40px;
+
+        .owl-carousel {
+
+            .slider-box {
+                position: relative;
+                z-index: -1;
+
+                .slider-img {
+                    width: 650px;
+                    height: 450px;
+                    display: inline-block;
+                    padding: 15px;
+                }
+
+                .violet-box {
+                    position: absolute;
+                    background: linear-gradient(to right, #FBEFEF 0, #FBCFC2 100%);
+                    top: 0;
+                    right: 0;
+                    width: 80%;
+                    height: 100%;
+                    z-index: -1;
+                    padding: 100px 0px 0 450px;
+
+                    .violet-paragraph {
+                        font-size: 21px;
+                    }
+
+                    .violet-btn {
+                        height: 40px;
+                        width: 145px;
+                        border: none;
+                        border-radius: 0;
+                        background-color: #F4EA77;
+                        box-shadow: 3px 3px #73D2E4;
+                        cursor: pointer;
+                        &:hover {
+                            box-shadow: 3px 3px 0 #948ad3;
+                            background-color: #fdb1be;
+                        }
+                    }
+                }
+
+            }
+
+
+        }
     }
+
 }
